# fileManagingC

./: CMakeLists.txt  README.md  config.ini  main.c  test.cpp  utils.h
.github/workflows/: cmake.yml
